# alfalfa-bacnet-bridge

./: .env  BACpypes.ini  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_cli.sh  start_device.sh
.github/workflows/: build.yml
alfalfa_bacnet_bridge/: alfalfa_bacnet_bridge.py  alfalfa_watchdog.py  discover_points.py
cli/: cli_setup.py
