[tool.poetry]
name = "alfalfa-bacnet-bridge"
version = "0.1.0"
description = ""
authors = ["TShapinsky <tobiasshapinsky@gmail.com>"]
readme = "README.md"
packages = [{include = "alfalfa_bacnet_bridge"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
bacpypes = "^0.18.6"
alfalfa-client = "0.7.0"
importlib-metadata = "^6.0.0"
bac0 = "^22.9.21"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
